@@ -63,6 +63,7 @@
 		<menuItem name="lightInspector" caption="_Light Inspector" command="ToggleLightInspector" />
 		<menuItem name="surfaceInspector" caption="_Surface Inspector" command="SurfaceInspector" />
 		<menuItem name="patchinspector" caption="_Patch Inspector" command="PatchInspector" />
+		<menuItem name="texturetool" caption="_Texture Tool" command="TextureTool" />
 		<menuItem name="entityList" caption="Entity List" command="EntityList" />
 		<menuSeparator />
 
